# WT-v2

./: .env.example  .gitignore  .npmrc  CNAME  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/bff/: package.json  tsconfig.json  vitest.config.ts
apps/bff/src/: index.ts
apps/web/: next.config.ts  package.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx
apps/web/hooks/: useMarketData.ts  useSignals.ts  useWhaleActivity.ts
apps/web/lib/: api-client.ts  ws-client.ts
apps/web/stores/: useMarketStore.ts  useSignalStore.ts  useTradeStore.ts  useWhaleStore.ts
services/engine/: pyproject.toml
services/engine/src/: config.py  main.py
services/engine/src/api/: router.py
services/engine/src/api/v1/: anomaly.py  backtest.py  market.py  signals.py  trading.py  whale.py
services/engine/src/core/: runtime.py
services/engine/src/core/anomaly/: circuit_breaker.py  detector.py
services/engine/src/core/data/: quality.py
services/engine/src/core/exchange/: aggregator.py  base.py  binance.py  bybit.py  okx.py
services/engine/src/core/liquidity/: fomo.py  liquidation.py  stop_hunt.py
services/engine/src/core/participant/: classifier.py
services/engine/src/core/signals/: base.py  fusion.py  registry.py  s1_whale_tracking.py  s2_capital_concentration.py  s3_funding_reversal.py  s4_liquidity_grab.py  s5_oi_divergence.py  s6_retail_counter.py  s7_stop_hunt.py  s8_smart_money_edge.py
services/engine/src/models/: __init__.py  backtest.py  market.py  participant.py  signal.py  trade.py
(+31 files in other folders)
